2002-11-05  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.3.2
	* version.c.in: update
	* doc/README: version 0.3.2, release date
	* doc-jp/README: ditto
	* NEWS: update

2002-11-05  Fumitoshi UKAI  <ukai@debian.or.jp>

	* scripts/w3mhelp.cgi.in: add chkWORD

2002-11-04  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00827] Re: w3m-cvs segfaults on news://<mid> URLs
	* url.c (openURL): check pu->file for news:

2002-10-31  Fumitoshi UKAI  <ukai@debian.or.jp>

	* fix compilation warnings
	* w3mimgdisplay.c: add #include <string.h> for strlen, strcmp
	* w3mimg/fb/fb.c: add #include <string.h> for memset
	* w3mimg/fb/fb_w3mimg.c: add #include <string.h> for memset

2002-10-31  Fumitoshi UKAI  <ukai@debian.or.jp>

	* 0.3.2 release candidate 4
	* version.c.in: update

2002-10-31  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03365] ~/.netrc support
	* etc.c (add_auth_pass_entry): add netrc arg
			add new entry to tail
		(find_auth_pass_entry): ent->host == NULL is "default"
		(loadPasswd): rewrite with next_token, parsePasswd, 
				openPasswdFile
				load ~/.netrc
		(next_token): added
		(parsePasswd): added
		(openPasswdFile): added
	* ftp.c (openFTP): use find_auth_user_passwd
	* NEWS: ~/.netrc

2002-10-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03363] refresh download
	* file.c (HTMLtagproc1): alarm is implicit once
	* fm.h (AL_IMPLICIT_ONCE): added
	* main.c (searchKeyData): reset CurrentKeyData, CurrentCmdData
		(SigAlarm): CurrentCmdData is saved to data
			message displayed on AL_EXPLICIT
			clear alarm when AL_IMPLICIT_ONCE
		(setAlarmEvent): AL_IMPLICIT_ONCE

2002-10-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03362] Re: support for http://user:pass@www.url.com
	* etc.c (loadPasswd): accept host, passwd

2002-10-31  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03359] support for http://user:pass@www.url.com
	* etc.c (find_auth_user_passwd): use ParsedURL for args