@@ -1,3 +1,15 @@
+2002-11-06  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03371] segmentation fault by large complex table.
+	* table.c (bsearch_2short): indexarry char to short
+		(bsearch_double): ditto
+		(dv2sv): ditto
+		(table_rule_width): ditto
+		(set_integrated_width): ditto
+		(check_table_height): ditto
+		(feed_table_tag): ditto
+	* table.h (struct table_cell): index, eindex char to short
+
 2002-11-05  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* w3m 0.3.2
